--- a/styles/main/style.scss
+++ b/styles/main/style.scss
@@ -287,3 +287,80 @@ body {
   font-weight: bold;
   letter-spacing: 2px;
 }
+
+// SECTION PROJETS
+
+.projects-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 100px;
+}
+
+.projects {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.project {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  height: 400px;
+  border: solid;
+  border-width: 0.5px;
+  margin-top: 50px;
+  margin-right: 50px;
+  &__image-box {
+    position: relative;
+    width: 350px;
+    height: 300px;
+    &__image {
+      width: 350px;
+      height: 100%;
+      object-fit: cover;
+    }
+    &__hover-frame {
+      position: absolute;
+      width: 350px;
+      height: 300px;
+      background-color: red;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      & > svg {
+        width: 75px;
+      }
+    }
+  }
+  &__text-box {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    &__title {
+      color: #000101;
+      font-weight: 600;
+      font-size: 18px;
+      text-transform: uppercase;
+      margin-left: 18px;
+      margin-top: 11px;
+      margin-bottom: 10px;
+    }
+    &__description {
+      color: #8f8f8f;
+      font-size: 14px;
+      text-transform: uppercase;
+      margin-left: 18px;
+    }
+  }
+}
