--- a/styles/main/style.scss
+++ b/styles/main/style.scss
@@ -1,11 +1,15 @@
 @import "../variables/variables.scss";
 
-body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
 html {
   scroll-behavior: smooth;
+  width: 100%;
+  overflow-x: hidden;
+}
+
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 // Barre de contacts
@@ -260,14 +264,18 @@ html {
   flex-direction: column;
   justify-content: space-around;
   align-items: flex-start;
+  min-height: 700px;
 }
 
 .domains {
+  min-width: 320px;
+
   width: 30%;
 }
 
 .development {
   width: 30%;
+  min-width: 320px;
 }
 
 .development-bar {
@@ -410,14 +418,6 @@ html {
 
 .modal-closed {
   display: none;
-  position: fixed;
-  top: 0;
-  right: 0;
-  height: 100vh;
-  width: 700px;
-  z-index: 1000;
-  background-color: white;
-  border-left: solid 2px;
 }
 
 .modal-opened {
@@ -435,12 +435,13 @@ html {
 
 #modal {
   position: fixed;
+  height: 100vh;
   &__frame {
     position: relative;
     width: 100%;
     height: 100%;
-    padding: 40px;
     overflow-y: scroll;
+    padding-left: 40px;
   }
   &__close {
     position: absolute;
@@ -461,6 +462,9 @@ html {
   }
   &__description {
     margin: 50px 0px;
+    line-height: 1.8em;
+    font-weight: 500;
+    letter-spacing: 1px;
   }
   &__images {
     display: flex;
@@ -476,14 +480,14 @@ html {
     justify-content: flex-start;
     align-items: center;
     flex-wrap: wrap;
-    margin-bottom: 50px;
+    margin-bottom: 5px;
   }
 }
 
 .modal-image {
-  width: 100%;
+  width: 500px;
   border: solid 1px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   margin-right: 10px;
 }
 
@@ -494,6 +498,15 @@ html {
   color: white;
   margin-right: 5px;
   font-size: 13px;
+}
+
+.modal-icons {
+  width: 50px;
+  height: 50px;
+  margin: 10px;
+  & > path {
+    fill: $primary;
+  }
 }
 
 #top {
@@ -534,7 +547,7 @@ html {
   flex-direction: column;
   justify-content: flex-start;
   border: solid 1px;
-  width: 90%;
+  width: 60%;
   margin-bottom: 20px;
   &__head {
     display: flex;
@@ -544,6 +557,7 @@ html {
     background-color: #e74c3c;
   }
   &__head__title {
+    width: 80%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -555,6 +569,7 @@ html {
     font-weight: bold;
     height: 50px;
     padding: 10px;
+    line-height: 130%;
   }
   &__head__arrow {
     width: 25px;
@@ -565,10 +580,12 @@ html {
     }
   }
   &__content {
-    display: "none";
+    display: none;
     padding: 10px;
     &__p {
-      line-height: 1.3em;
+      line-height: 1.8em;
+      font-weight: 500;
+      letter-spacing: 1px;
     }
   }
 }
@@ -590,9 +607,11 @@ html {
 .layout {
   width: 100%;
   display: flex;
-  justify-content: space-around;
   flex-direction: row;
+  justify-content: space-around;
+
   align-items: flex-start;
+  flex-wrap: wrap;
 }
 
 .contact-form {
@@ -654,7 +673,7 @@ html {
   margin-top: 50px;
   border-top: solid 1px;
   border-color: $primary;
-  padding: 20px;
+  padding: 20px 0px;
   &__list {
     display: flex;
     flex-direction: row;
@@ -697,5 +716,159 @@ html {
         }
       }
     }
+  }
+}
+
+// MEDIA QUERIES
+
+// tablettes
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  /* CSS */
+}
+
+@media screen and (max-width: 767px) {
+  .header {
+    height: 120px;
+    padding: 5px 0px;
+  }
+
+  .nav-bar__list {
+    flex-direction: column;
+    font-size: 12px;
+  }
+
+  .background__title__h1 {
+    font-size: 20px;
+  }
+  .background__title__h2 {
+    font-size: 40px;
+  }
+
+  .scroll-down {
+    width: 19px;
+    height: 42px;
+    & > svg {
+      width: 15px;
+    }
+  }
+
+  .section-title {
+    font-size: 33px;
+  }
+
+  .section-subtitle {
+    font-size: 20px;
+    margin-bottom: 58px;
+  }
+
+  .skills__title {
+    font-size: 16px;
+  }
+
+  .skills-section__container {
+    margin-bottom: 20px;
+  }
+
+  .skills {
+    font-size: 13px;
+  }
+
+  .skill__description {
+    font-size: 12px;
+  }
+
+  .skill-list {
+    min-height: 500px;
+  }
+
+  .development {
+    margin-top: 70px;
+  }
+
+  .skill-list {
+    margin-top: 20px;
+  }
+
+  .projects {
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .project {
+    margin: 15px 0;
+  }
+
+  .dropdown {
+    width: 90%;
+  }
+
+  .form-container {
+    width: 77%;
+  }
+
+  .heading {
+    margin-top: 30px;
+  }
+
+  .about_intro {
+    font-size: 13px;
+  }
+
+  .dropdown__head__title {
+    font-size: 10px;
+    padding: 5px;
+    line-height: 120%;
+  }
+
+  .about-section {
+    margin-bottom: 50px;
+  }
+
+  .contact-form {
+    height: 269px;
+  }
+
+  .input {
+    font-size: 11px;
+  }
+
+  .contact-info__list {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+
+  #top {
+    width: 30px;
+    height: 30px;
+    right: 12px;
+    &__svg {
+      width: 30px;
+      height: 30px;
+    }
+  }
+
+  // MODALE
+
+  .modal-opened {
+    width: 100%;
+    padding-bottom: 30px;
+  }
+
+  #modal__frame {
+    padding: 15px;
+  }
+
+  #modal__description {
+    margin: 30px 0;
+  }
+
+  #modal__images {
+    flex-direction: column;
+  }
+
+  .modal-image {
+    width: 100%;
   }
 }
