--- a/styles/main/style.scss
+++ b/styles/main/style.scss
@@ -1,4 +1,4 @@
-@import "../variables/variables.scss";
+@import '../variables/variables.scss';
 
 html {
   scroll-behavior: smooth;
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   width: 100%;
   overflow-x: hidden;
 }
@@ -108,7 +108,7 @@ body {
       justify-content: center;
       align-items: center;
       &::after {
-        content: "";
+        content: '';
         width: 0px;
         height: 5px;
         background-color: $primary;
@@ -325,7 +325,7 @@ body {
 .projects {
   width: 100%;
   display: flex;
-  flex-direction: row;
+  flex-direction: row-reverse;
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
@@ -632,7 +632,7 @@ body {
   letter-spacing: 2px;
   font-size: 15px;
   padding-left: 5px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 #message {
