--- a/styles/reset/reset.css
+++ b/styles/reset/reset.css
@@ -127,5 +127,4 @@ q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
-}
-/*# sourceMappingURL=reset.css.map */
+}/*# sourceMappingURL=reset.css.map */
